Updated for Craft 3.1.5

--- a/src/templates/gatewaySettings.html
+++ b/src/templates/gatewaySettings.html
@@ -5,7 +5,7 @@
     id: 'apiKey',
     class: 'ltr',
     name: 'apiKey',
-    suggestions: craft.cp.getEnvSuggestions(),
+    suggestEnvVars: true,
     value: gateway.apiKey,
     errors: gateway.getErrors('apiKey')
 }) }}
