`apiKey` env var

--- a/src/templates/gatewaySettings.html
+++ b/src/templates/gatewaySettings.html
@@ -6,6 +6,6 @@
   class: 'ltr',
   name: 'apiKey',
   suggestEnvVars: true,
-  value: gateway.apiKey,
+  value: gateway.getApiKey(false),
   errors: gateway.getErrors('apiKey')
 }) }}
